[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltran"
version = "0.1.0"
description = "Hexagonal Modular Federation System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Voltran Team" }
]
keywords = ["hexagonal", "microservices", "federation", "discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "nats-py>=2.6.0",
    "pydantic>=2.5.0",
    "uvloop>=0.19.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "aiohttp>=3.9.0",
    "zeroconf>=0.131.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
voltran = "voltran.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["voltran"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "B", "C4", "DTZ", "T10", "PIE", "PT", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PL", "TRY", "RUF"]
ignore = ["ANN101", "ANN102", "PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
